# knightrade

./: .gitignore  README.md  main.py  pyproject.toml
docs/: backtest.md  conventions.md  final_report.md  midway_report.md  proposal.md  strategy.md  version_log.md
docs/data_module/: data_handler.md  data_module.md  standard_data.md
src/knightrade/: __init__.py  backtest.py  strategy.py  visualization.py
src/knightrade/data/: __init__.py  data_handler.py  standard_data.py
tests/: test_standard_data.py
